# obligacjeskarbowe

./: .gitignore  800plus.toml.example  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
obligacjeskarbowe/: __main__.py  client.py  family800plus.py  parser.py  two_factor.py
tests/: test_800plus.py  test_parser.py
