[project]
name = "obligacjeskarbowe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.1.8",
    "lxml>=5.4.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "tablib>=3.8.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pyflakes>=3.3.2",
    "pytest>=8.3.5",
]
